Fix OIDC provider icons not centered verticially

--- a/server/auth/assets/public/style.css
+++ b/server/auth/assets/public/style.css
@@ -46,3 +46,7 @@ label {
 .footer {
   margin-top: auto;
 }
+
+.bi::before {
+  vertical-align: middle;
+}
